data/derived/comb/progs/unify/prog0547.ml.out
Characters 57-70:
  (backCons ys) :: y :: x;;
  ^^^^^^^^^^^^^
Error: This expression has type 'a list -> 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list -> 'a list
